@@ -6,6 +6,7 @@ distro-info (0.25) UNRELEASED; urgency=medium
   [ Stefano Rivera ]
   * Bump standards-Version to 4.5.1, no changes needed.
   * Bump copyright years.
+  * Re-black Python.
 
  -- Stefano Rivera <stefanor@debian.org>  Wed, 27 Jan 2021 19:46:16 -0700
 
